fix(extension): Use higher values for z-index and document that usage, Fixed #5

--- a/chromium-kiosk-extension/src/app/components/navbar/navbar.component.scss
+++ b/chromium-kiosk-extension/src/app/components/navbar/navbar.component.scss
@@ -15,7 +15,7 @@
   position: fixed;
   width: 50%;
   height: 50px;
-  z-index: 99999;
+  z-index: 2147483644;
   bottom: 0;
   left: 0;
   background-color: rgba(53, 53, 53, .85);
