--- a/chromium-kiosk-extension/src/app/components/screensaver/screensaver.component.scss
+++ b/chromium-kiosk-extension/src/app/components/screensaver/screensaver.component.scss
@@ -4,14 +4,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99997;
+  z-index: 2147483646;
   background: #000000;
 
   .text-container {
     position: absolute;
     top: 50%;
     width: 100%;
-    z-index: 99998;
+    z-index: 2147483647;
 
     p {
       color: #4285F4;
