--- a/chromium-kiosk-extension/src/app/components/virtual-keyboard/virtual-keyboard.component.scss
+++ b/chromium-kiosk-extension/src/app/components/virtual-keyboard/virtual-keyboard.component.scss
@@ -14,8 +14,3 @@
 .mat-input-element:disabled {
   color: currentColor;
 }
-/*
-:host '/deep/' .mat-input-placeholder {
-  top: 10px !important;
-  font-size: 24px !important;
-}*/
